// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`relations resolvers generation should properly generate relation resolver class for model with multi id keys with relation: MovieRelationsResolver 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Director } from \\"../../../models/Director\\";
import { Movie } from \\"../../../models/Movie\\";
import { plainToClass } from \\"class-transformer\\";

@Resolver(() => Movie)
export class MovieRelationsResolver {
  @ResolveField(() => Director, {
    nullable: false,
    description: undefined,
    complexity: ({ childComplexity }) => 1 * childComplexity
  })
  async director(@Root() movie: Movie, @Context() ctx: any): Promise<Director> {
    return plainToClass(Director, await ctx.prisma.movie.findOne({
      where: {
        directorFirstName_directorLastName_title: {
          directorFirstName: movie.directorFirstName,
          directorLastName: movie.directorLastName,
          title: movie.title,
        },
      },
    }).director({}) as Director);
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolver class for model with unique fields: DirectorRelationsResolver 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Director } from \\"../../../models/Director\\";
import { Movie } from \\"../../../models/Movie\\";
import { plainToClass } from \\"class-transformer\\";
import { DirectorMoviesArgs } from \\"./args/DirectorMoviesArgs\\";

@Resolver(() => Director)
export class DirectorRelationsResolver {
  @ResolveField(() => [Movie], {
    nullable: true,
    description: undefined,
    complexity: ({ args, childComplexity }) => ((args.take + (args.skip ?? 0)) ?? 1) * childComplexity
  })
  async movies(@Root() director: Director, @Context() ctx: any, @Args() args: DirectorMoviesArgs): Promise<Movie[] | null | undefined> {
    return plainToClass(Movie, await ctx.prisma.director.findOne({
      where: {
        firstName_lastName: {
          firstName: director.firstName,
          lastName: director.lastName,
        },
      },
    }).movies(args) as [Movie]);
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolvers classes for models with renamed relation fields: Post 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { plainToClass } from \\"class-transformer\\";

@Resolver(() => Post)
export class PostRelationsResolver {
  @ResolveField(() => User, {
    nullable: true,
    description: \\"author field doc\\",
    complexity: ({ childComplexity }) => 1 * childComplexity
  })
  async postAuthor(@Root() post: Post, @Context() ctx: any): Promise<User | null | undefined> {
    return plainToClass(User, await ctx.prisma.post.findOne({
      where: {
        uuid: post.uuid,
      },
    }).author({}) as User);
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolvers classes for models with renamed relation fields: User 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { plainToClass } from \\"class-transformer\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";

@Resolver(() => User)
export class UserRelationsResolver {
  @ResolveField(() => [Post], {
    nullable: true,
    description: undefined,
    complexity: ({ args, childComplexity }) => ((args.take + (args.skip ?? 0)) ?? 1) * childComplexity
  })
  async userPosts(@Root() user: User, @Context() ctx: any, @Args() args: UserPostsArgs): Promise<Post[] | null | undefined> {
    return plainToClass(Post, await ctx.prisma.user.findOne({
      where: {
        id: user.id,
      },
    }).posts(args) as [Post]);
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolver and args class for array relation resolvers: UserPostsArgs 1`] = `
"import { ArgsType, Field, Int } from \\"@nestjs/graphql\\";
import { PostOrderByInput } from \\"../../../inputs/PostOrderByInput\\";
import { PostWhereInput } from \\"../../../inputs/PostWhereInput\\";
import { PostWhereUniqueInput } from \\"../../../inputs/PostWhereUniqueInput\\";
import { Type as ClassTransformer__Type } from \\"class-transformer\\";
import { PostDistinctFieldEnum } from \\"../../../../enums/PostDistinctFieldEnum\\";

@ArgsType()
export class UserPostsArgs {
  @ClassTransformer__Type(() => PostWhereInput)
  @Field(() => PostWhereInput, { nullable: true })
  where?: PostWhereInput | null | undefined;

  @ClassTransformer__Type(() => PostOrderByInput)
  @Field(() => [PostOrderByInput], { nullable: true })
  orderBy?: PostOrderByInput[] | null | undefined;

  @ClassTransformer__Type(() => PostWhereUniqueInput)
  @Field(() => PostWhereUniqueInput, { nullable: true })
  cursor?: PostWhereUniqueInput | null | undefined;

  @Field(() => Int, { nullable: true, defaultValue: 20 })
  take?: number | null | undefined;

  @Field(() => Int, { nullable: true })
  skip?: number | null | undefined;

  @Field(() => [PostDistinctFieldEnum], { nullable: true })
  distinct?: Array<keyof typeof PostDistinctFieldEnum> | null | undefined;
}
"
`;

exports[`relations resolvers generation should properly generate resolver and args class for array relation resolvers: UserRelationsResolver 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { plainToClass } from \\"class-transformer\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";

@Resolver(() => User)
export class UserRelationsResolver {
  @ResolveField(() => [Post], {
    nullable: true,
    description: undefined,
    complexity: ({ args, childComplexity }) => ((args.take + (args.skip ?? 0)) ?? 1) * childComplexity
  })
  async posts(@Root() user: User, @Context() ctx: any, @Args() args: UserPostsArgs): Promise<Post[] | null | undefined> {
    return plainToClass(Post, await ctx.prisma.user.findOne({
      where: {
        id: user.id,
      },
    }).posts(args) as [Post]);
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolver class for single relation resolvers: UserRelationsResolver 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Address } from \\"../../../models/Address\\";
import { User } from \\"../../../models/User\\";
import { plainToClass } from \\"class-transformer\\";

@Resolver(() => User)
export class UserRelationsResolver {
  @ResolveField(() => Address, {
    nullable: true,
    description: undefined,
    complexity: ({ childComplexity }) => 1 * childComplexity
  })
  async address(@Root() user: User, @Context() ctx: any): Promise<Address | null | undefined> {
    return plainToClass(Address, await ctx.prisma.user.findOne({
      where: {
        id: user.id,
      },
    }).address({}) as Address);
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolvers classes for prisma models with cyclic relations: Post 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { plainToClass } from \\"class-transformer\\";

@Resolver(() => Post)
export class PostRelationsResolver {
  @ResolveField(() => User, {
    nullable: true,
    description: \\"author field doc\\",
    complexity: ({ childComplexity }) => 1 * childComplexity
  })
  async author(@Root() post: Post, @Context() ctx: any): Promise<User | null | undefined> {
    return plainToClass(User, await ctx.prisma.post.findOne({
      where: {
        uuid: post.uuid,
      },
    }).author({}) as User);
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolvers classes for prisma models with cyclic relations: User 1`] = `
"import { Args, Context, ResolveField, Resolver, Root } from \\"@nestjs/graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { plainToClass } from \\"class-transformer\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";

@Resolver(() => User)
export class UserRelationsResolver {
  @ResolveField(() => [Post], {
    nullable: true,
    description: undefined,
    complexity: ({ args, childComplexity }) => ((args.take + (args.skip ?? 0)) ?? 1) * childComplexity
  })
  async posts(@Root() user: User, @Context() ctx: any, @Args() args: UserPostsArgs): Promise<Post[] | null | undefined> {
    return plainToClass(Post, await ctx.prisma.user.findOne({
      where: {
        id: user.id,
      },
    }).posts(args) as [Post]);
  }
}
"
`;
